mise en conf foireuse: pas de reception en udp

--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
+environment/project/org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2667289/PATH/delimiter=\:
+environment/project/org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2667289/PATH/operation=replace
+environment/project/org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2667289/PATH/value=/home/cheff/robotik/gcc-arm-none-eabi-5_4-2016q3/bin\:${PATH}
 environment/project/org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2667289/append=true
-environment/project/org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2667289/appendContributed=true
+environment/project/org.eclipse.linuxtools.cdt.autotools.core.configuration.build.2667289/appendContributed=false
